Style: Fix unbounded max width causing very wide spans to overflow

--- a/pep_sphinx_extensions/pep_theme/static/mq.css
+++ b/pep_sphinx_extensions/pep_theme/static/mq.css
@@ -50,7 +50,7 @@
         width: 100%;
     }
     section#pep-page-section > article {
-        max-width: 40em;
+        max-width: 37em;
         width: 74%;
         float: right;
         margin-right: 0;
@@ -69,7 +69,7 @@
 }
 @media (min-width: 60em) {
     section#pep-page-section > article {
-        max-width: none;
+        max-width: 56em;
         padding-left: 3.2%;
         padding-right: 3.2%;
     }
